fix bugs; improve UI